# cpp_kafka

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  TestOpenCV  TestOpenCV.cbp  cmake_install.cmake  my_install_manifest.txt
package/: cppkafka.pc
src/: ApiConnection.cpp  ApiConnection.h  Headers.h  KafkaConnection.cpp  KafkaConnection.h  main.cpp
